--- a/exercice3/style.css
+++ b/exercice3/style.css
@@ -8,6 +8,29 @@
 }
 
 @keyframes exercice3 {
-
-
+    5%{
+        background: red;
+        left: 0;
+        top: 0;
+    }
+    25%{
+        background: blue;
+        left: 0;
+        top: 200px;
+    }
+    50%{
+        background: green;
+        left: 200px;
+        top: 200px;
+    }
+    75%{
+        background: yellow;
+        left: 200px;
+        top: 0;
+    }
+    100%{
+        background: red;
+        left: 0;
+        top: 0;
+    }
 }
