--- a/exercice1/style.css
+++ b/exercice1/style.css
@@ -24,18 +24,16 @@
     75% {
         width: 200px;
         height: 200px;
-        left:5px
+        left:5px;
     }
     100% {
         width:25px;
         height : 25px;
         background : purple;
         top:50px;
-        left:65px
+        left:65px;
     }
 }
-
-
 
 #bar {
     width: 85px;
@@ -44,4 +42,31 @@
     position: absolute;
     left: 500px;
     top: 25px;
+    animation-name : bar-animation;
+    animation-duration : 8s;
+    animation-fill-mode : forwards;
+}
+
+@keyframes bar-animation {
+    5% {
+        width: 20px;
+        height:20px;
+    }
+    25% {
+        background : red;
+        width: 150px;
+        height: 150px;
+        transform: rotate(180deg);
+    }
+    75% {
+        top: 25px;
+        left:5px
+    }
+    100% {
+        width:85px;
+        height : 85px;
+        background : yellow;
+        top:0;
+        right:0;
+    }
 }
