--- a/exobonus2/exobonus2.css
+++ b/exobonus2/exobonus2.css
@@ -39,8 +39,16 @@
 #helice {
     animation-name: rotHelice;
     animation-duration: 5s;
+    height: 300px;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
 @keyframes rotHelice {
-
+    from{
+       transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
 }
